--- a/app/views/layouts/_navber.html.erb
+++ b/app/views/layouts/_navber.html.erb
@@ -20,6 +20,24 @@
 		  					アイテムを追加
 		  				<%end%>
 		  			</li>
+		  			
+		  			<li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                <span class="gravatar">
+                  <img src="<%= gravatar_url(current_user, size: 20) %>" alt="" class="img-circle">
+                </span>
+                <span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu" >
+                <li>
+                  <%= link_to 'Wantランキング', rankings_want_path %>
+                </li>
+		  					<li>
+		  					  <%= link_to 'Haveランキング', / %>
+		  					  </li>
+		  				</ul>
+		  			</li>		  			
+		  			
 		  			<li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                 <span class="gravatar">
@@ -36,6 +54,8 @@
 		  					<li><%= link_to 'ログアウト', logout_path, method: :delete %></li>
 		  				</ul>
 		  			</li>
+		  			
+		  			
 		  		<%else%>
          		<li><%=link_to "新規登録", signup_path %></li>
           	<li><%=link_to "ログイン",login_path %></li>
