--- a/app/views/layouts/_navber.html.erb
+++ b/app/views/layouts/_navber.html.erb
@@ -33,8 +33,8 @@
                   <%= link_to 'Wantランキング', rankings_want_path %>
                 </li>
 		  					<li>
-		  					  <%= link_to 'Haveランキング', / %>
-		  					  </li>
+		  					  <%= link_to 'Haveランキング', rankings_have_path %>
+		  					 </li>
 		  				</ul>
 		  			</li>		  			
 		  			
