--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,28 +1,14 @@
-class ItemsController < ApplicationController
-  before_action :require_user_logged_in
-  
-  def new
-    @items=[]
-    
-    @keyword = params[:keyword]
-    if @keyword.present?
-      results =  RakutenWebService::Ichiba::Item.search({
-        keyword: @keyword,
-        imageFlag: 1,
-        hits: 20,
-      })
-      
-      results.each do |result|
-        item= Item.find_or_initialize_by(read(result))
-        @items << item
-      end
-    end
-  end
-  
-  def show
-    @item = Item.find(params[:id])
-    @want_users = @item.want_users
-    @have_users = @item.have_users
-  end
-end
+<div class="search">
+  <div class = "row">
+    <div class="text-center">
+      <%= form_tag(new_item_path, method: :get, class:"form-inline") do %>
+        <div class="form-group">
+          <%=text_field_tag :keyword, @keyword, class:"form-controll input-lg", placeholder:"キーワードを入力", size:40 %>
+        </div>
+        <%= submit_tag "商品を検索",class:"btn btn-success btn-lg"%>
+      <%end%>
+    </div>
+  </div>
+</div>
 
+<%= render 'items', items: @items %>
