--- a/app/views/layouts/_navber.html.erb
+++ b/app/views/layouts/_navber.html.erb
@@ -23,9 +23,8 @@
 		  			
 		  			<li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                <span class="gravatar">
-                  <img src="<%= gravatar_url(current_user, size: 20) %>" alt="" class="img-circle">
-                </span>
+                <span class="glyphicon glyphicon-signal" aria-hidden="true"></span>
+                ランキング
                 <span class="caret"></span>
               </a>
               <ul class="dropdown-menu" >
